--- a/src/less/frontend.less
+++ b/src/less/frontend.less
@@ -9,5 +9,8 @@
 @import "center.less";
 /*基本样式*/
 @import "basic.less";
-/*content页样式*/
-@import "content.less";
+// 头尾样式
+@import "header.less";
+@import "footer.less";
+/*系统资源页样式*/
+@import "systemres.less";
