导入中间页样式

--- a/src/less/systemres.less
+++ b/src/less/systemres.less
@@ -1,3 +1,443 @@
-#right-menu header{
-    
+/*顶部*/
+.res-header {
+  background: #fff;
+  margin-top: 40px;
 }
+.res-rtitle {
+  height: 55px;
+  border: 1px solid #bebebe;
+  background: #dedede;
+  line-height: 55px;
+  font-size: 20px;
+  color: #8b8b8b;
+}
+.res-rtitle label {
+  padding-left: 40px;
+}
+.res-rtitle img {
+  position: relative;
+  top: 3px;
+}
+.res-rtitle select {
+  color: #717171;
+  width: 66px;
+  height: 27px;
+  font-size: 20px;
+}
+.c-pos {
+  position: absolute;
+  right: 337px;
+}
+.res-rtitle .right-label {
+  border-bottom: 1px solid #858585;
+  padding: 0;
+  cursor: pointer;
+}
+.res-search-btn {
+  width: 30px;
+  height: 30px;
+  background: #0094ce;
+  display: inline-block;
+  position: relative;
+  top: 15px;
+}
+.res-search-btn img {
+  position: relative;
+  top: -12px;
+  left: 10px;
+}
+.res-rtitle .version-wr {
+  width: 14px;
+  background: #9f9f9f;
+  padding: 4px;
+  top: 4px;
+  position: relative;
+  left: -24px;
+}
+.select-tips {
+  font-size: 20px;
+  background: #fff;
+  font-size: 18px;
+  border: 1px solid #b5b5b5;
+  padding-right: 30px;
+}
+.res-rbody {
+  display: block;
+}
+.res-rbody div {
+  border-bottom: 1px solid #dbdbdb;
+  line-height: 65px;
+  color: #8d8d8d;
+  font-size: 20px;
+}
+.res-rbody a:hover {
+  color: #e78024;
+}
+.span-1 {
+  display: inline-block;
+  width: 115px;
+  text-align: center;
+}
+.span-21 {
+  display: inline-block;
+  width: 1000px;
+}
+.span-2 a,
+.span-21 a,
+.span-22 a {
+  padding-right: 35px;
+  padding-left: 10px;
+}
+.span-22 {
+  display: none;
+  width: 1000px;
+  margin-left: 119px;
+}
+.span-3 {
+  cursor: pointer;
+}
+.img-transform {
+  -moz-transform: rotate(-180deg);
+  -webkit-transform: rotate(-180deg);
+}
+.res-rbody .orange-style-current {
+  padding: 5px 10px;
+  color: #fff;
+  background: #e78024;
+  border-radius: 2px;
+  margin-right: 25px;
+}
+.res-rbody .orange-style-current:hover {
+  color: #fff;
+}
+/*中间*/
+.res-r-main {
+  height: 925px;
+}
+.res-r-main-s {
+  height: 300px;
+  display: none;
+  margin-top: 30px;
+}
+.res-rli {
+  width: 1200px;
+  height: 500px;
+  border: 1px solid #bebebe;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+/*左侧*/
+.res-rleft {
+  width: 258px;
+  height: 1130px;
+  background: #dedede;
+  float: left;
+}
+.res-rleft p {
+  color: #fff;
+  background: #0094ce;
+  height: 62px;
+  line-height: 62px;
+  text-align: center;
+  font-size: 22px;
+}
+/*右侧*/
+.res-rright {
+  float: right;
+  background: #fff;
+}
+.res-rright .res-rright-title {
+  color: #666666;
+  background: #dedede;
+  line-height: 58px;
+  text-align: center;
+  font-size: 18px;
+  height: 60px;
+  border-bottom: 2px solid #0094ce;
+}
+.res-rright .res-rright-title div:first-child {
+  width: 54px;
+}
+.res-rright .res-rright-title div:last-child {
+  width: 53px;
+}
+.res-rright .res-rright-title div {
+  float: left;
+  height: 60px;
+  line-height: 60px;
+  cursor: pointer;
+  padding: 0 8px;
+}
+.res-rright .res-rright-title .line-img {
+  float: left;
+  height: 60px;
+  line-height: 60px;
+}
+.current-res {
+  background: #fff;
+  color: #0094ce;
+  border-top: 2px solid #0094ce;
+  border-left: 2px solid #0094ce;
+  border-right: 2px solid #0094ce;
+}
+.res-rright-body .res-r-hide {
+  display: none;
+}
+.res-rright-body .res-r-show {
+  display: block;
+}
+.res-r-top {
+  height: 82px;
+  border-bottom: 1px solid #ccc;
+}
+.res-r-top p {
+  margin-top: 25px;
+  margin-left: 20px;
+}
+.res-r-top span {
+  color: #4d4d4d;
+  font-size: 20px;
+  padding-right: 10px;
+}
+.res-r-top a {
+  color: #808080;
+  padding: 2px 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+.res-r-top a:hover {
+  color: #26a3d5;
+}
+.res-r-top .res-co {
+  background: #7ac1e5;
+  border: 1px solid #26a3d5;
+  border-radius: 3px;
+  color: #fff;
+}
+.res-r-top .res-co:hover {
+  color: #fff;
+}
+.message-tab {
+  width: 620px;
+  float: right;
+  margin-top: 20px;
+}
+.message-tab a {
+  font-size: 18px;
+  padding: 0 5px 0 0px;
+}
+.t1,
+.t2 {
+  position: relative;
+  cursor: pointer;
+}
+.t1 {
+  top: 5px;
+  margin-left: 12px;
+}
+.t2 {
+  left: -6px;
+  top: 5px;
+}
+/*全部列表*/
+.res-r-main ul {
+  width: 835px;
+  margin: 0 auto;
+  margin-top: 35px;
+}
+.res-r-main ul li {
+  height: 125px;
+  border: 1px solid #b3b3b3;
+  margin-bottom: 25px;
+}
+.res-ul span {
+  height: 125px;
+  display: block;
+  float: left;
+}
+.res-ul .span1 {
+  width: 56px;
+}
+.i-c {
+  width: 19px;
+  height: 25px;
+  padding: 0 5px 0 0;
+  background: url(../img/d.png) no-repeat;
+  display: block;
+  clear: left;
+  float: left;
+  position: relative;
+  left: 20px;
+  top: 50px;
+}
+.d {
+  position: relative;
+  top: 48px;
+  left: -9px;
+  display: none;
+}
+.res-ul .span2 {
+  width: 120px;
+}
+.res-ul .span2 img {
+  height: 90px;
+  width: 118px;
+  margin-top: 18px;
+}
+.res-ul .span3 {
+  width: 230px;
+  padding-left: 20px;
+}
+.text-title {
+  color: #0e0f10;
+  font-size: 14px;
+  margin-top: 18px;
+  font-weight: bold;
+}
+.text-size {
+  color: #858585;
+  font-size: 10px;
+  padding-top: 15px;
+}
+.res-ul .span4 {
+  width: 207px;
+}
+.res-ul .span4 img {
+  cursor: pointer;
+}
+.res-ul .span4:hover {
+  visibility: visible;
+}
+.res-ul .span4 img {
+  margin-top: 40px;
+  padding-left: 22px;
+}
+.res-ul .span5 {
+  width: 200px;
+  float: right;
+}
+.res-ul .span5 p {
+  color: #858585;
+  font-size: 12px;
+  padding-top: 16px;
+  text-align: right;
+  margin-right: 15px;
+  clear: both;
+}
+.res-ul .span5 .qu {
+  color: #fff;
+  width: 18px;
+  height: 18px;
+  line-height: 18px;
+  padding: 4px 5px;
+  border-radius: 3px;
+  background: #e96e51;
+  font-weight: bold;
+  float: right;
+  margin-top: 10px;
+}
+/*被选中的样式*/
+.res-r-main ul .checked-style {
+  border: 1px solid #009cd6;
+  background: #fff;
+}
+/*li当划过时改变颜色*/
+.res-ul li:hover {
+  background: #dbeef1;
+}
+/*分页*/
+.page {
+  text-align: center;
+  margin-top: 50px;
+}
+.page a {
+  width: 28px;
+  height: 28px;
+  color: #858585;
+  background: #d2d2d2;
+  display: inline-block;
+  line-height: 28px;
+  border-radius: 3px;
+}
+.page img {
+  position: relative;
+  top: 2px;
+}
+.page .a-checked {
+  background: #0094ce;
+  color: #fff;
+}
+.page .go {
+  background: none;
+  width: 50px;
+  float: right;
+}
+.page .go-style {
+  background: #0094ce;
+  border-radius: 50px;
+  float: right;
+  color: #fff;
+  font-size: 10px;
+  padding: 2px;
+}
+.page input {
+  width: 50px;
+  float: right;
+  height: 25px;
+  border-radius: 2px;
+  border: 1px solid #858585;
+  background: #d2d2d2;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+/*缩略图*/
+.li-s {
+  width: 288px;
+  height: 345px;
+  border: 1px solid #b1b1b1;
+  float: left;
+  margin-left: 15px;
+  margin-bottom: 25px;
+}
+.li-s-checked {
+  border: 1px solid #0094ce;
+}
+.li-s .li-img {
+  width: 99.9%;
+  height: 202px;
+}
+.li-s .img-title {
+  padding: 5px;
+  color: #000;
+  font-size: 20px;
+  border-bottom: 1px solid #cbcbcb;
+}
+.li-s .s-left {
+  width: 65%;
+  float: left;
+  margin-top: 4px;
+}
+.li-s .s-left p {
+  color: #858585;
+  font-size: 16px;
+  padding-left: 5px;
+}
+.li-s .s-left .q-c {
+  color: #0094ce;
+}
+.li-s .i-right {
+  width: 35%;
+  float: right;
+}
+.li-s .i-right .i-right-1 {
+  text-align: center;
+}
+.li-s .i-right .i-right-1 img {
+  width: 15px;
+}
+.li-s .i-right .i-right-2 img {
+  position: relative;
+  top: 11px;
+  left: 18px;
+}
+/*# sourceMappingURL=systemres.css.map */
