页面header和footer的修改

--- a/src/coms/layout/footer/footer.html
+++ b/src/coms/layout/footer/footer.html
@@ -1,10 +1,10 @@
 ﻿<div class="container" id="footer">
-	电话：400-699-8396　传真：010-68434907　QQ：924305138，1335547592（服务时间：每天8:30-17:30）　邮箱：kefu@tfedu.net
+	<p>电话：400-699-8396　传真：010-68434907　QQ：924305138，1335547592（服务时间：每天8:30-17:30）　邮箱：kefu@tfedu.net</p>
 
-地址：北京市海淀区王庄路1号清华同方科技广场A座17层　邮编：100084
+	<p>地址：北京市海淀区王庄路1号清华同方科技广场A座17层　邮编：100084</p>
 
-Copyright©2005-2015，All Rights Reserved　版权所有：同方知好乐教育科技（北京）有限公司
+	<p>Copyright©2005-2015，All Rights Reserved　版权所有：同方知好乐教育科技（北京）有限公司</p>
 
-京ICP备 10003979
+	<p>京ICP备 10003979</p>
 	
 </div>
