--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -3,5 +3,12 @@
 #footer{
     position: fixed;
     bottom: 0;
+    background: #128799;
+        margin-left: 20%;
+}
+
+p{
+    text-align: center;
+    color: white;
 }
 
