--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,5 +1,134 @@
 // header样式
-
-#footer{
+*{
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
+
+
+#header{
+    
+    height: 450px;
+    background: url(../assets/img/repeat.jpg) repeat-x bottom left;
+    position: relative;
+}
+.logo{
+    position: absolute;
+    top: 5px;
+    margin-left: 50px;
+    z-index: 100000;
+    width: 25%;
+}
+.abc{
+    position: absolute;
+    bottom: 121px;
+    left: 576px;
+    z-index: 99999;
+    width: 10%;
+}
+.book{
+    width: 10%;
+    position: absolute;
+    left: 143px;
+    top: 175px;
+    z-index: 99999;
+}
+.plane{
+    position: absolute;
+    top: 66px;
+    left: 295px;
+    width: 10%;
+    z-index: 99998;
+}
+.classsub{
+    position: absolute;
+    top: 107px;
+    left: 437px;
+    z-index: 99999;
+    width: 45%;
+}
+.tree{
+    position: absolute;
+    bottom: 58px;
+    z-index: 99997;
+    left: 44px;
+    width: 40%;
+}
+.whitec{
+    position: absolute;
+    bottom: 20px;
+    left: 560px;
+    z-index: 99999;
+}
+.redc{
+    position: absolute;
+    bottom: 39px;
+    right: 292px;
+}
+
+.lunc{
+    position: absolute;
+    bottom: 55px;
+    right: 20px
+}
+
+.clound1{
+    position: absolute;
+    right: 0;
+    top: 52px;
+    width: 15%;
+}
+.sea{
+    position: absolute;
+    right: -228px;
+    top: 216px;
+    width: 15%;
+}
+.set{
+    position: absolute;
+    right: -24px;
+    top: 160px;
+    width: 3%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
