--- a/src/coms/system-res/views/systemres.html
+++ b/src/coms/system-res/views/systemres.html
@@ -1,456 +1,5 @@
 ﻿<div class="container" id="res-container">
-	<div class="res-header">
-		<!-- 选择 导航 展示-->
-		<div class="res-rtitle">
-			<label>您的选择:</label>
-			<select class="res-select-grade">
-				<option>小学</option>
-				<option>初中</option>
-				<option selected>高中</option>
-			</select>
-			<img src="assets/img/next.png" />
-			<select class="res-select-subject">
-				<option>语文</option>
-				<option>数学</option>
-				<option selected>英语</option>
-			</select>
-			<img src="assets/img/next.png" />
-			<a class="select-tips">全部</a><img class="version-wr" src="assets/img/wr.png" />
-			<div class="c-pos">
-                <label class="right-label">收起筛选</label>
-			   	<input class="res-search" type="search" placeholder="在当前条件下搜索"/>		   
-			   	<span class="res-search-btn">
-			   		<img src="assets/img/glass.png"/>		   
-				</span>
-			</div>
-		</div>
-		<!--显示隐藏-->
-		<div class="res-rbody">
-			<div class="line1">
-				<span class="span-1">学段:</span>
-				<span class="span-2">
-		   	   	   	<a>小学</a>
-		   	   	   	<a>初中</a>
-		   	   	   	<a>高中</a>
-		   	   	   </span>
-			</div>
-			<div class="line2">
-				<span class="span-1">学科:</span>
-				<span class="span-21">
-		   	   	   	<a>语文</a>
-		   	   	   	<a>数学</a>
-		   	   	   	<a>英语</a>
-		   	   	   	<a>a</a>
-		   	   	   	<a>b</a>
-		   	   	   	<a>c</a>
-		   	   	   	<a>d</a>
-		   	   	   	<a>e</a>
-		   	   	   	<a>f</a>
-		   	   	   	<a>g</a>
-		   	   	   	<a>h</a>
-		   	   	   
-		   	   	   </span>
-				<span class="span-3">
-		   	   	   	<a>更多</a>
-		   	   	   	<img src="assets/img/b-a.png"/>
-		   	   	   </span>
-				<div class="span-22">
-					<a>i</a>
-					<a>j</a>
-					<a>k</a>
-					<a>l</a>
-					<a>m</a>
-					<a>n</a>
-					<a>o</a>
-					<a>p</a>
-					<a>q</a>
-					<a>r</a>
-					<a>s</a>
-				</div>
-			</div>
-			<div class="line3">
-				<span class="span-1">版本:</span>
-				<span class="span-2">
-		   	   	   	<a>北师大版本</a>
-		   	   	   	<a>人教版</a>
-		   	   	   	<a>鲁教版</a>
-		   	   	   	<a>苏科版</a>
-		   	   	   	<a>粤教版</a>
-		   	   	   	<a>华东师大版本</a>
-		   	   	   </span>
-			</div>
-		</div>
-	</div>
-	<div class="res-rli">
-		<div class="res-rleft">
-			<p>课标导航</p>
-		</div>
-		<div class="res-rright">
-			<div class="res-rright-title">
-				<div class="current-res">全部</div>
-				<a class="line-img">|</a>
-				<div>动画教具库</div>
-				<a class="line-img">|</a>
-				<div>名师微课库</div>
-				<a class="line-img">|</a>
-				<div>教学案例库</div>
-				<a class="line-img">|</a>
-				<div>教学素材库</div>
-				<a class="line-img">|</a>
-				<div>多媒体教辅库</div>
-				<a class="line-img">|</a>
-				<div>理化生实验室</div>
-				<a class="line-img">|</a>
-				<div>情景英语</div>
-				<a class="line-img">|</a>
-				<div>题库</div>
-			</div>
-			<div class="res-rright-body">
-				<div class="res-r-hide res-r-show">
-					<div class="res-r-top">
-						<p>
-							<span>资源类型:</span>
-							<a class="res-co">全部</a>
-							<a>动画</a>
-							<a>视频</a>
-							<a>音频</a>
-							<a>图片</a>
-							<a>网页</a>
-							<a>课件</a>
-							<a>教案</a>
-							<a>文本</a>
-							<a>试题</a>
-						</p>
-						<div class="message-tab">
-							<img src="assets/img/s-g.png" />
-							<a>推荐指数</a>
-							<img src="assets/img/s-c.png" />
-							<a>评分星级</a>
-							<img src="assets/img/s-g.png" />
-							<a>下载次数</a>
-							<img src="assets/img/s-g.png" />
-							<a>收藏次数</a>
-							<img src="assets/img/s-g.png" />
-							<a>浏览次数</a>
-							<img class="t1" src="assets/img/tab1.png" />
-							<img class="t2" src="assets/img/tab2.png" />
-						</div>
-					</div>
-					<div class="res-r-main">
-						<ul class="res-ul">
-							<li class="current-style">
-								<span class="span1">
-									<input class="i-c" type="checkbox">
-									<img class="d" src="assets/img/d.png"></span>
-								<span class="span2">
-									<img src="assets/img/title.jpg"></span>
-								<span class="span3">
-									<p class="text-title">《触摸春天》生字学习</p>
-									<p class="text-size">大小：10M</p>
-								</span>
-								<span class="span4">
-									<!-- <img src="assets/img/c1.png">
-									<img src="assets/img/c2.png">
-									<img src="assets/img/c3.png">--></span>
-								<span class="span5">
-									<p>类型:<a>动画</a></p>
-									<p>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-									</p> 
-									<p class="qu">区</p>
-								</span>
-							</li>
-							<li class="current-style">
-								<span class="span1">
-									<input class="i-c" type="checkbox">
-									<img class="d" src="assets/img/d.png"></span>
-								<span class="span2">
-									<img src="assets/img/title.jpg"></span>
-								<span class="span3">
-									<p class="text-title">《触摸春天》生字学习</p>
-									<p class="text-size">大小：10M</p>
-								</span>
-								<span class="span4">
-									<!-- <img src="assets/img/c1.png">
-									<img src="assets/img/c2.png">
-									<img src="assets/img/c3.png">--></span>
-								<span class="span5">
-									<p>类型:<a>动画</a></p>
-									<p>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-									</p> 
-									<p>于2015/12/14共享到校</p>
-								</span>
-							</li>
-							<li class="current-style">
-								<span class="span1">
-									<input class="i-c" type="checkbox">
-									<img class="d" src="assets/img/d.png"></span>
-								<span class="span2">
-									<img src="assets/img/title.jpg"></span>
-								<span class="span3">
-									<p class="text-title">《触摸春天》生字学习</p>
-									<p class="text-size">大小：10M</p>
-								</span>
-								<span class="span4">
-									<!-- <img src="assets/img/c1.png">
-									<img src="assets/img/c2.png">
-									<img src="assets/img/c3.png">--></span>
-								<span class="span5">
-									<p>类型:<a>动画</a></p>
-									<p>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-									</p> 
-									<p>于2015/12/14共享到校</p>
-								</span>
-							</li>
-							<li class="current-style">
-								<span class="span1">
-									<input class="i-c" type="checkbox">
-									<img class="d" src="assets/img/d.png"></span>
-								<span class="span2">
-									<img src="assets/img/title.jpg"></span>
-								<span class="span3">
-									<p class="text-title">《触摸春天》生字学习</p>
-									<p class="text-size">大小：10M</p>
-								</span>
-								<span class="span4">
-									<!-- <img src="assets/img/c1.png">
-									<img src="assets/img/c2.png">
-									<img src="assets/img/c3.png">--></span>
-								<span class="span5">
-									<p>类型:<a>动画</a></p>
-									<p>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-									</p> 
-									<p>于2015/12/14共享到校</p>
-								</span>
-							</li>
-							<li class="current-style">
-								<span class="span1">
-									<input class="i-c" type="checkbox">
-									<img class="d" src="assets/img/d.png"></span>
-								<span class="span2">
-									<img src="assets/img/title.jpg"></span>
-								<span class="span3">
-									<p class="text-title">《触摸春天》生字学习</p>
-									<p class="text-size">大小：10M</p>
-								</span>
-								<span class="span4">
-									<!-- <img src="assets/img/c1.png">
-									<img src="assets/img/c2.png">
-									<img src="assets/img/c3.png">--></span>
-								<span class="span5">
-									<p>类型:<a>动画</a></p>
-									<p>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-									</p> 
-									<p>于2015/12/14共享到校</p>
-								</span>
-							</li>
-
-							<div class="page">
-								<img src="assets/img/l1.png">
-								<a class="a-checked">1</a>
-								<a>2</a> <i>...</i>
-								<a>5</a>
-								<img src="assets/img/r1.png" />
-								<a class="go-style">GO</a>
-								<input type="text" />
-								<a class="go">转到</a>
-							</div>
-						</ul>
-					</div>
-					<div class="res-r-main-s">
-						<div class="li-s">
-							<img class="li-img" src="assets/img/title.jpg" />
-							<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-							<div class="s-left">
-								<p>多媒体教辅</p>
-								<p>大小：<a>4.1M</a></p>
-								<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-							</div>
-							<div class="i-right">
-								<p class="i-right-1">
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-								</p>
-								<p class="i-right-2">
-									<img class="res1" src="assets/img/res-1.png" />
-									<img class="res2" src="assets/img/c2.png" />
-								</p>
-							</div>
-						</div>
-						<div class="li-s">
-							<img class="li-img" src="assets/img/title.jpg" />
-							<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-							<div class="s-left">
-								<p>多媒体教辅</p>
-								<p>大小：<a>4.1M</a></p>
-								<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-							</div>
-							<div class="i-right">
-								<p class="i-right-1">
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-								</p>
-								<p class="i-right-2">
-									<img class="res1" src="assets/img/res-1.png" />
-									<img class="res2" src="assets/img/c2.png" />
-								</p>
-							</div>
-						</div>
-						<div class="li-s">
-							<img class="li-img" src="assets/img/title.jpg" />
-							<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-							<div class="s-left">
-								<p>多媒体教辅</p>
-								<p>大小：<a>4.1M</a></p>
-								<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-							</div>
-							<div class="i-right">
-								<p class="i-right-1">
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-
-								</p>
-								<p class="i-right-2">
-									<img class="res1" src="assets/img/res-1.png" />
-									<img class="res2" src="assets/img/c2.png" />
-								</p>
-							</div>
-						</div>
-						<div class="li-s">
-							<img class="li-img" src="assets/img/title.jpg" />
-							<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-							<div class="s-left">
-								<p>多媒体教辅</p>
-								<p>大小：<a>4.1M</a></p>
-								<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-							</div>
-							<div class="i-right">
-								<p class="i-right-1">
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-								</p>
-								<p class="i-right-2">
-									<img class="res1" src="assets/img/res-1.png" />
-									<img class="res2" src="assets/img/c2.png" />
-								</p>
-							</div>
-						</div>
-						<div class="li-s">
-							<img class="li-img" src="assets/img/title.jpg" />
-							<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-							<div class="s-left">
-								<p>多媒体教辅</p>
-								<p>大小：<a>4.1M</a></p>
-								<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-							</div>
-							<div class="i-right">
-								<p class="i-right-1">
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-								</p>
-								<p class="i-right-2">
-									<img class="res1" src="assets/img/res-1.png" />
-									<img class="res2" src="assets/img/c2.png" />
-								</p>
-							</div>
-						</div>
-						<div class="li-s">
-							<img class="li-img" src="assets/img/title.jpg" />
-							<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-							<div class="s-left">
-								<p>多媒体教辅</p>
-								<p>大小：<a>4.1M</a></p>
-								<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-							</div>
-							<div class="i-right">
-								<p class="i-right-1">
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-								</p>
-								<p class="i-right-2">
-									<img class="res1" src="assets/img/res-1.png" />
-									<img class="res2" src="assets/img/c2.png" />
-								</p>
-							</div>
-						</div>
-						<div class="li-s">
-							<img class="li-img" src="assets/img/title.jpg" />
-							<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-							<div class="s-left">
-								<p>多媒体教辅</p>
-								<p>大小：<a>4.1M</a></p>
-								<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-							</div>
-							<div class="i-right">
-								<p class="i-right-1">
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-									<img src="assets/img/s-y.png" />
-								</p>
-								<p class="i-right-2">
-									<img class="res1" src="assets/img/res-1.png" />
-									<img class="res2" src="assets/img/c2.png" />
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="res-r-hide">b
-				</div>
-				<div class="res-r-hide">c
-				</div>
-				<div class="res-r-hide">d
-				</div>
-				<div class="res-r-hide">e
-				</div>
-				<div class="res-r-hide">g
-				</div>
-				<div class="res-r-hide">h
-				</div>
-				<div class="res-r-hide">i
-				</div>
-			</div>
-		</div>
-	</div>
+	<div data-ng-include="'/coms/system-res/views/sysres-header.html'"></div>
+	<div data-ng-include="'/coms/tree/views/tree.html'"></div>
+	<div data-ng-include="'/coms/system-res/views/sysres-content.html'"></div>
 </div>
