--- a/src/less/font.less
+++ b/src/less/font.less
@@ -18,7 +18,23 @@ html{
 // 导航字体
 @nav: 2.4rem;
 
-
 /*通用配色 颜色设置*/
 //body 背景色
 @bodyBgColor: #B6E0EE;
+// 导航背景色
+@navBgColor:#128799;
+// 资源导航背景色
+@resNavHeaderBGColor:#3ebbcf;
+// 资源头 背景色
+@resNavBgColor:#dcf0f7;
+// 资源头 footer背景色
+@resNavFooterBgColor:#94b530;
+// 资源 列表背景色
+@resListBgColor:#e6f4f4;
+
+/*通用字体 颜色设置*/
+@fff: #fff;
+
+// 最
+
+
