--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -13,6 +13,20 @@
 		<img class="whitec" src="assets/img/whitec.jpg" />
 		<img class="redc" src="assets/img/redc.jpg" />
 	</div>
-	
-	
+	<ul class="message">
+		<li><a href="#">消息</a><img class="reds" src="assets/img/red-c.png"/></li>
+		<li><a href="#">帮助中心</a></li>
+		<li><a href="#">退出</a></li>
+	</ul>
+	<div class="nav">
+		<ul>
+			<li class="on">系统资源</li>
+			<li>校本资源</li>
+			<li>区本资源</li>
+			<li>学生学习空间</li>
+			<li>资源定制</li>
+			<li><img src="assets/img/person.jpg"/>个人中心</li>
+			<li><img src="assets/img/gou.jpg"/>备课夹</li>
+		</ul>
+	</div>
 </div>
