--- a/src/less/header.less
+++ b/src/less/header.less
@@ -91,15 +91,44 @@
     width: 3%;
 }
 
+.message{
+    position: absolute;
+    right:0;
+}
 
+.message li{
+    float: left;
+    margin: 10px;
+    position: relative;
+}
 
+.reds{
+    position: absolute;
+    top: -2px;
+    right: -8px;
+}
+.nav{
+    background-color: #128799;
+    color: white;
+    position: absolute;
+    bottom: -40px;
+}
+.nav li{
+    float: left;
+    margin: 10px;
+    width: 138px;
+    height: 49px;
+    vertical-align: middle;
+    line-height: 49px;
+    text-align: center;
+}
+.nav li.on{
+    background: url(../assets/img/nav_bj.png) no-repeat; 
+}
 
-
-
-
-
-
-
+.nav li img{
+    width: 20%;
+}
 
 
 
