--- a/src/less/header.less
+++ b/src/less/header.less
@@ -100,9 +100,10 @@
     float: left;
     margin: 10px;
     position: relative;
+}
+.message li a{
     color: #054E5D;
 }
-
 .reds{
     position: absolute;
     top: -2px;
