--- a/src/coms/layout/footer/footer.html
+++ b/src/coms/layout/footer/footer.html
@@ -1,4 +1,4 @@
-﻿<div class="container" id="footer">
+﻿<div id="footer">
 	<p>电话：400-699-8396　传真：010-68434907　QQ：924305138，1335547592（服务时间：每天8:30-17:30）　邮箱：kefu@tfedu.net</p>
 
 	<p>地址：北京市海淀区王庄路1号清华同方科技广场A座17层　邮编：100084</p>
