--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -1,32 +1,29 @@
-﻿<div class="container" id="header">
-	<div>
-		<img class="logo" src="assets/img/logo.jpg"/>
-		<img class="book" src="assets/img/book.jpg" />
-		<img class="plane" src="assets/img/plane.jpg" />
-		<img class="tree" src="assets/img/tree.jpg" />
-		<img class="abc" src="assets/img/abc.jpg" />
-		<img class="classsub" src="assets/img/classsub.jpg" />
-		<img class="clound1" src="assets/img/clound1.jpg" />
-		<img class="set" src="assets/img/set.jpg" />
-		<img class="lunc" src="assets/img/lunc.jpg" />
-		<img class="sea" src="assets/img/sea.jpg" />
-		<img class="whitec" src="assets/img/whitec.jpg" />
-		<img class="redc" src="assets/img/redc.jpg" />
-	</div>
-	<ul class="message">
-		<li><a href="#">消息</a><img class="reds" src="assets/img/red-c.png"/></li>
-		<li><a href="#">帮助中心</a></li>
-		<li><a href="#">退出</a></li>
-	</ul>
-	<div class="nav">
-		<ul>
-			<li class="on">系统资源</li>
-			<li>校本资源</li>
-			<li>区本资源</li>
-			<li>学生学习空间</li>
-			<li>资源定制</li>
-			<li><img src="assets/img/person.jpg"/>个人中心</li>
-			<li><img src="assets/img/gou.jpg"/>备课夹</li>
+﻿<div id="header">
+	<div class="header-top container">
+		<img class="logo" src="assets/images/logo.jpg"/>
+		<ul class="message">
+			<li><a href="#">消息</a></li>
+			<li><a href="#">帮助中心</a></li>
+			<li><a href="#">退出</a></li>
 		</ul>
+	</div>
+	<div class="container banner"><img  src="assets/images/banner.png"/></div>
+	
+	<div class="banner-footer">
+		<div class="banner-footer-header"></div>
+		<div class="banner-footer-footer"></div>
+	</div>
+	<div class="nav">
+		<div class="container">
+			<ul class="main-nav">
+				<li class="on">系统资源</li>
+				<li>校本资源</li>
+				<li>区本资源</li>
+				<li>学生学习空间</li>
+				<li>资源定制</li>
+			</ul>
+			<div class="nav-tools"><img src="assets/img/person.jpg"/>个人中心</div>
+			<div class="nav-tools"><img src="assets/img/gou.jpg"/>备课夹</div>
+		</div>
 	</div>
 </div>
