--- a/src/less/font.less
+++ b/src/less/font.less
@@ -16,25 +16,52 @@ html{
 
 /*通用字体大小设置*/
 // 导航字体
-@nav: 2.4rem;
+@navFontSize: 2.4rem;
+
+// 资源导航字体
+@resNavFontSize: 1.6rem;
 
 /*通用配色 颜色设置*/
+@color1: #12879A;
+@color2: #3FBBCF;
+@color3: #B7E0EE;
+@color4: #E4F3F7;
+@color5: #219B81;
+@color6: #E6F4F4;
+@color7: #DF3D6D;
+@color8: #EC80AF;
+@color9: #ECA9C1;
+@color10: #323333;
+@color11: #4D4D4D;
+@color12: #5D5D5D;
+@color13: #808080;
+@color14: #ddd;
+
 //body 背景色
-@bodyBgColor: #B6E0EE;
+@bodyBgColor: @color3;
 // 导航背景色
-@navBgColor:#128799;
+@navBgColor:@color1;
+
+// 顶部消息颜色
+@msgColor: @color1;
+
+// banner
+@bannerFooterBgColor: @color2;
+// 主导航
+@navBgColor:@color1;
+
 // 资源导航背景色
-@resNavHeaderBGColor:#3ebbcf;
-// 资源头 背景色
-@resNavBgColor:#dcf0f7;
+@resNavBgColor:@color4;
+// 资源导航 header背景色
+@resNavHeaderBGColor:@color2;
+
 // 资源头 footer背景色
 @resNavFooterBgColor:#94b530;
 // 资源 列表背景色
-@resListBgColor:#e6f4f4;
+@resListBgColor:@color6;
 
 /*通用字体 颜色设置*/
 @fff: #fff;
 
-// 最
 
 
