--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -1,13 +1,11 @@
 // footer样式
 #footer{
-    position: fixed;
-    bottom: 0;
-    background: #128799;
-    margin-left: 16%;
+    background: @color1;
+    padding: 25px 0;
 }
 
 p{
     text-align: center;
-    color: white;
+    color: #fff;
 }
 
