--- a/src/less/systemres.less
+++ b/src/less/systemres.less
@@ -5,11 +5,10 @@
 }
 .res-rtitle {
   height: 55px;
-  border: 1px solid #bebebe;
-  background: #dedede;
+  background: @resNavHeaderBGColor;
   line-height: 55px;
-  font-size: 20px;
-  color: #8b8b8b;
+  font-size: @resNavFontSize;
+  color: #fff;
 }
 .res-rtitle label {
   padding-left: 40px;
