--- a/src/less/header.less
+++ b/src/less/header.less
@@ -59,8 +59,8 @@
     box-sizing: border-box;
 }
 #header .nav-tools {
-    float: left;
-    margin-right: 10px;
+    float: right;
+    margin-right: 15px;
 }
 #header .nav-tools img{
     width: 30px;
