--- a/src/less/systemres.less
+++ b/src/less/systemres.less
@@ -24,21 +24,28 @@
   font-size: 20px;
 }
 .c-pos {
-  position: absolute;
-  right: 337px;
+  float: right;
 }
 .res-rtitle .right-label {
   border-bottom: 1px solid #858585;
   padding: 0;
   cursor: pointer;
+  display: inline-block;
+  height: 40px;
+}
+input[type=search] {
+  height: 30px;
+  width: 343px;
+  line-height: 30px;
+  border: none;
 }
 .res-search-btn {
-  width: 30px;
+  width: 32px;
   height: 30px;
   background: #0094ce;
   display: inline-block;
   position: relative;
-  top: 15px;
+  top: 13px;
 }
 .res-search-btn img {
   position: relative;
@@ -46,19 +53,23 @@
   left: 10px;
 }
 .res-rtitle .version-wr {
-  width: 14px;
-  background: #9f9f9f;
+  width: 19px;
+  background: #12879A;
   padding: 4px;
-  top: 4px;
+  top: -2px;
   position: relative;
-  left: -24px;
+  left: -22px;
 }
 .select-tips {
   font-size: 20px;
   background: #fff;
   font-size: 18px;
   border: 1px solid #b5b5b5;
-  padding-right: 30px;
+  display: inline-block;
+  width: 66px;
+  height: 27px;
+  line-height: 27px;
+  text-indent: 5px;
 }
 .res-rbody {
   display: block;
@@ -79,7 +90,7 @@
 }
 .span-21 {
   display: inline-block;
-  width: 1000px;
+  
 }
 .span-2 a,
 .span-21 a,
@@ -151,7 +162,7 @@
   line-height: 58px;
   text-align: center;
   font-size: 18px;
-  height: 60px;
+  height: 58px;
   border-bottom: 2px solid #0094ce;
 }
 .res-rright .res-rright-title div:first-child {
@@ -162,10 +173,10 @@
 }
 .res-rright .res-rright-title div {
   float: left;
-  height: 60px;
-  line-height: 60px;
+  height: 58px;
+  line-height: 58px;
   cursor: pointer;
-  padding: 0 8px;
+  padding: 0 5px;
 }
 .res-rright .res-rright-title .line-img {
   float: left;
@@ -219,7 +230,7 @@
 .message-tab {
   width: 620px;
   float: right;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 .message-tab a {
   font-size: 18px;
@@ -231,12 +242,12 @@
   cursor: pointer;
 }
 .t1 {
-  top: 5px;
+  top: 0px;
   margin-left: 12px;
 }
 .t2 {
   left: -6px;
-  top: 5px;
+  top: 1px;
 }
 /*全部列表*/
 .res-r-main ul {
@@ -312,7 +323,6 @@
   padding-left: 22px;
 }
 .res-ul .span5 {
-  width: 200px;
   float: right;
 }
 .res-ul .span5 p {
