--- a/src/coms/system-res/views/systemres.html
+++ b/src/coms/system-res/views/systemres.html
@@ -1,5 +1,16 @@
 ﻿<div class="container" id="res-container">
+	<!--header导航-->
 	<div data-ng-include="'/coms/system-res/views/sysres-header.html'"></div>
-	<div data-ng-include="'/coms/tree/views/tree.html'"></div>
-	<div data-ng-include="'/coms/system-res/views/sysres-content.html'"></div>
+	
+	<!--左侧目录-->
+	<div class="catalog">
+		<div class="catalog-header"></div>
+		<div class="catalog-content">
+			<div class="catalog-tip"><img src="assets/images/catalog/catalog-tip.png"></div>
+			<div class="catalog-tree" data-ng-include="'/coms/system-res/tree/views/tree.html'"></div>
+		</div>
+		
+	</div>
+	<!--右侧资源列表-->
+	<div class="col-md-9" data-ng-include="'/coms/system-res/views/sysres-content.html'"></div>
 </div>
